jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  #namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    #ingress.kubernetes.io/auth-type: "basic"
    #ingress.kubernetes.io/auth-secret: "mysecret"
spec:
  rules:
  - host: dashboard.cqt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 80
#  tls:
#   - secretName: traefik-tls-cert
